istio/simple-dst-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-dst-rule
  namespace: server-ns
spec:
  host: server-service.server-ns.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
